Fix minor navbar collapse issue for mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,10 @@ p{
       padding-top: 100px;
 }
 
-
+#about-me-text{
+     font-family: var(--secondary-font);   
+      color: var(--primary-color);
+}
 
 #commissions{
     padding-top: 100px;
